<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/reviewer_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_profile"
        app:civ_border_color="@color/primary"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviewer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/review_date"
        app:layout_constraintStart_toEndOf="@+id/reviewer_image"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sample_name" />

    <RatingBar
        android:id="@+id/rating_bar_review"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:isIndicator="true"
        android:numStars="@string/num_star"
        android:progressTint="@color/primary"
        android:rating="@string/sample_rating"
        android:stepSize="@string/step_size"
        app:layout_constraintStart_toEndOf="@+id/reviewer_image"
        app:layout_constraintTop_toBottomOf="@+id/reviewer_name" />

    <TextView
        android:id="@+id/review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/two_days_ago" />

    <TextView
        android:id="@+id/review_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewer_image"
        android:text="@string/sample_review" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/review_text"
        />
    
</androidx.constraintlayout.widget.ConstraintLayout>
