<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Profile Picture -->
        <View
            android:id="@+id/iv_car_thumbnail"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/bg_badge"
            app:layout_constraintBottom_toBottomOf="@+id/action_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_car_name" />

        <!-- Renters Name -->
        <TextView
            android:id="@+id/tv_car_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sample_car"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_car_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Trip Details -->
        <TextView
            android:id="@+id/tv_date_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/sample_start_end_date"
            android:textColor="@color/primary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_car_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tv_car_name" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/sample_amount"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_car_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_range" />

        <!-- Action Button -->
        <LinearLayout
            android:id="@+id/action_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/tv_price">

            <Button
                android:id="@+id/pending_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/primary"
                android:padding="0dp"
                android:text="@string/pending"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/accept_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/primary"
                android:padding="0dp"
                android:text="@string/accept"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/decline_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/warning"
                android:padding="0dp"
                android:text="@string/decline"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
