<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="100dp"
        android:elevation="8dp"
        android:transitionName="logo_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_white" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:letterSpacing="0.05"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_line"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:letterSpacing="0.03"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="@+id/app_name"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/get_started"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="28dp"
        app:elevation="6dp"
        app:backgroundTint="@color/white"
        app:rippleColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>